# StealthPay

./: README.md  package.json
backend/: .env.example  .gitignore  generate_proof.js  index.js  package-lock.json  package.json
backend/crypto/: keys.js  scan.js  stealth.js
circuits/: .gitignore  package-lock.json  package.json
circuits/scripts/: generate_proof.js
circuits/src/: stealth_ownership.circom
contracts/: .gitignore  Cargo.toml
contracts/stealth_registry/: Cargo.toml
contracts/stealth_registry/src/: lib.rs
contracts/zk_verifier/: Cargo.toml
contracts/zk_verifier/src/: lib.rs
frontend/: .env.example  README.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/history/: page.tsx
frontend/app/prove/: page.tsx
frontend/app/receive/: page.tsx
frontend/app/send/: page.tsx
frontend/components/: about-section.tsx  cta-section.tsx  footer.tsx  globe-demo.tsx  hero-section.tsx  horizontal-timeline.tsx  navbar.tsx  skills-section.tsx  stealth-demo.tsx  three-tier-section.tsx  timeline-section.tsx  wallet-connect.tsx  zk-scene.tsx
frontend/components/ui/: globe.tsx
frontend/data/: globe.json  portfolio-data.ts
frontend/hooks/: use-wallet.ts  wallet-context.tsx
