[package]
name = "zk_verifier"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "26.1.0", features = ["alloc"] }
ark-bn254    = { version = "0.4", default-features = false, features = ["curve"] }
ark-groth16  = { version = "0.4", default-features = false }
ark-ec       = { version = "0.4", default-features = false }
ark-ff       = { version = "0.4", default-features = false }
ark-serialize = { version = "0.4", default-features = false }

[profile.release]
opt-level     = "z"
overflow-checks = false
debug         = 0
strip         = "symbols"
debug-assertions = false
panic         = "abort"
codegen-units = 1
lto           = true

[dev-dependencies]
soroban-sdk = { version = "26.1.0", features = ["testutils"] }
